@@ -1,8 +1,0 @@
-#ifndef _ECA_COMHELP_H
-#define _ECA_COMHELP_H
-
-#include <string>
-
-const char* ecasound_parameter_help(void);
-
-#endif
