@@ -1,3 +1,7 @@
+2002-06-28  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* eca-comhelp.h: file removed
+
 2002-06-24  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* eca-engine.h: ECA_ENGINE::set_position_samples() added
